1er Commit al MASTER para el Html y Css del blogspot

--- a/blogspot.html
+++ b/blogspot.html
@@ -5,10 +5,14 @@
 
 	</head>
 	<body>
-		<h1>Este es un blog super cool</h1>
-		<p>Esta sección corresponde a la escritura del texto del blog,
-			Es super raro esto, pero así funciona
-		</p>
+		<div id="container"> 
+			<div id="post"> 
+				<h1>Este es un blog super cool</h1>
+				<p>Esta sección corresponde a la escritura del texto del blog,
+				Es super raro esto, pero así funciona. Es mas para probar todo lo que tiene que ver con branch, crear cabecera en paralelo al master.. y así...</p>
+				
+		</div>
+	</div>
 	</body>
 	
 
