--- a/blogspot.html
+++ b/blogspot.html
@@ -6,6 +6,9 @@
 	</head>
 	<body>
 		<div id="container"> 
+			<div id="cabecera">
+				CABECERA 
+			</div>
 			<div id="post"> 
 				<h1>Este es un blog super cool</h1>
 				<p>Esta sección corresponde a la escritura del texto del blog,
