--- a/blogspot.html
+++ b/blogspot.html
@@ -7,7 +7,8 @@
 	<body>
 		<div id="container"> 
 			<div id="cabecera">
-				CABECERA 
+				Hyperblog
+				<span id="tagline"> Tu blog de confianza</span> 
 			</div>
 			<div id="post"> 
 				<h1>Este es un blog super cool</h1>
