--- a/blogspot.html
+++ b/blogspot.html
@@ -8,7 +8,7 @@
 		<div id="container"> 
 			<div id="cabecera">
 				Hyperblog
-				<span id="tagline"> Tu blog de confianza</span> 
+				<span id="tagline"> Tu blog de MASTER</span> 
 			</div>
 			<div id="post"> 
 				<h1>Este es un blog super cool</h1>
