--- a/blogspot.html
+++ b/blogspot.html
@@ -15,6 +15,7 @@
 				<p>Esta sección corresponde a la escritura del texto del blog,
 				Es super raro esto, pero así funciona. Es mas para probar todo lo que tiene que ver con branch, crear cabecera en paralelo al master.. y así...</p>
 				<p>La vida es un poco extraña, haces lo que te gusta pero al ganar dinero con ello ya te deja de gustar porque no haces tus propios proyectos, al final casi nada gusta si es por hacer dinero para otros</p>
+				<p>Suscribete y paga</p>
 				
 		</div>
 	</div>
