cambio de titulo versión para actualizar github

--- a/blogspot.html
+++ b/blogspot.html
@@ -1,6 +1,6 @@
 <html> 
 	<head>
-		<title>Este es un blog </title>
+		<title>Este es un blog 2.0 </title>
 		<link rel="stylesheet" href="CSS/syles.css" />
 
 	</head>
