--- a/blogspot.html
+++ b/blogspot.html
@@ -8,7 +8,9 @@
 		<div id="container"> 
 			<div id="cabecera">
 				Hyperblog
+				<img src="imagenes/cute-cat.jpg" />
 				<span id="tagline"> Tu blog de MASTER</span> 
+				
 			</div>
 			<div id="post"> 
 				<h1>Este es un blog super cool</h1>
