agregué imagenes para ocultar en .gitignore

--- a/blogspot.html
+++ b/blogspot.html
@@ -23,10 +23,10 @@
 				<p>Esta versión luego del FORK en Git-DanSteel30</p>
 				<p>Esta edición es de ALEXA... solamente quiero revisar el GIT</p> <!--intentando poner una imagen desde url-->
 				<p><a href="https://imgur.com/t/nature/J5WBbfc"><img src="ttps://i.imgur.com/yM6eHD9.jpeg" width="100%" title="La naturaleza"/></a></p>
-
-		</div>
+				<p><img src="./imagenes/6075834.jpg" alt="imagen naturaleza" id="foto1" ></p>
+		
 			<div id="footer">  
-				Hecho con amor con Dani-Platzi... <3
+				Hecho con amor con Dani-Platzi... 3
 			</div>
 	</div>
 	</body>
