--- a/blogspot.html
+++ b/blogspot.html
@@ -22,7 +22,7 @@
 				<p>La vida es un poco extraña, haces lo que te gusta pero al ganar dinero con ello ya te deja de gustar porque no haces tus propios proyectos, al final casi nada gusta si es por hacer dinero para otros</p>
 				<p>Esta versión luego del FORK en Git-DanSteel30</p>
 				<p>Esta edición es de ALEXA... solamente quiero revisar el GIT</p> <!--intentando poner una imagen desde url-->
-				<p><a href="https://imgur.com/t/nature/J5WBbfc"><img src="ttps://i.imgur.com/yM6eHD9.jpeg" width="100%" title="La naturaleza"/></a></p>
+				<p><a href="https://	imgur.com"><img src="https://i.imgur.com/yM6eHD9.jpeg" width="100%"  alt="imagen de internet"></a></p>
 				<p><img src="./imagenes/6075834.jpg" alt="imagen naturaleza" id="foto1" ></p>
 		
 			<div id="footer">  
