--- a/blogspot.html
+++ b/blogspot.html
@@ -14,15 +14,15 @@
 				
 				<span id="tagline"> Header - Tu BLOG super preferido</span> 
 				
-			</div>
-			< id="post"> 
+			</div id="post">
+			
 				<h1>Este es un blog super cool</h1>
 				<p>Esta sección corresponde a la escritura del texto del blog,
 				Es super raro esto, pero así funciona. Es m&aacute;s para probar todo lo que tiene que ver con branch, crear una cabecera en paralelo al master.. y as&iacute;...</p>
 				<p>La vida es un poco extraña, haces lo que te gusta pero al ganar dinero con ello ya te deja de gustar porque no haces tus propios proyectos, al final casi nada gusta si es por hacer dinero para otros</p>
 				<p>Esta versión luego del FORK en Git-DanSteel30</p>
 				<p>Esta edición es de ALEXA... solamente quiero revisar el GIT</p> <!--intentando poner una imagen desde url-->
-				<p><a href="https://	imgur.com"><img src="https://i.imgur.com/yM6eHD9.jpeg" width="100%"  alt="imagen de internet"></a></p>
+				<p><img src="https://i.imgur.com/yM6eHD9.jpeg" width="100%"  alt="imagen de internet"></p>
 				<p><img src="./imagenes/6075834.jpg" alt="imagen naturaleza" id="foto1" ></p>
 		
 			<div id="footer">  
